<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.andr.xyzyx.finalproject.ChaCha_fragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/chachainfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/chacha_page"
            android:textSize="@dimen/pageinfo" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayout"
            android:layout_below="@+id/chachainfo">

            <TextView
                android:id="@+id/chahcatest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/linearLayout"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/chachainfo"
                android:text="@string/testinfo"
                android:textSize="@dimen/testinfosize" />

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/Linerlayout_margin"
            android:orientation="vertical"
            android:id="@+id/linearLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/nav_header_vertical_spacing"
                android:paddingLeft="@dimen/textview_margin"
                android:paddingRight="@dimen/textview_margin"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/key"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/chacha_key"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="1234"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_chacha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/check" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/about_chacha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/this_is_chacha"
            android:textColor="@color/archer"
            android:paddingBottom="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin"/>
    </LinearLayout>

</LinearLayout>
